--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 script:
   - ng lint
   - npm run test
-  - ng build --prod --base-href https://dlevkov.github.io/denis-test-prj-timer/
+  - ng build --prod --base-href https://dlevkov.github.io/timet-test-prj
 deploy:
   provider: pages
   skip-cleanup: true
