--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@briebug/jest-schematic": "^1.5.1",
     "core-js": "^2.5.4",
+    "lodash-es": "^4.17.11",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
