--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 
 script:
   - ng lint
-  - npm run test
+  - npm run test --ci --coverage
   - ng build --prod --base-href https://dlevkov.github.io/timet-test-prj/
 deploy:
   provider: pages
