--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,18 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
-    "types": [
-      "jest",
-      "node"
-    ],
-    "module": "commonjs"
+    "types": ["jest", "node"],
+    "module": "commonjs",
+    "allowJs": true
   },
-  "files": [
-    "test.ts",
-    "polyfills.ts"
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  "files": ["test.ts", "polyfills.ts"],
+  "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
