--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "23.6.0",
+    "jest-marbles": "^2.2.0",
     "jest-preset-angular": "6.0.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
