--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:augury": "ng serve --configuration augury",
     "build": "ng build",
     "test": "jest",
     "lint": "ng lint",
@@ -34,6 +35,8 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@augury/core": "^0.5.2",
+    "@augury/performance-profiler-plugin": "^0.5.2",
     "@briebug/jest-schematic": "^1.5.1",
     "@types/jest": "^23.3.13",
     "@types/node": "~8.9.4",
