--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "core-js": "^3.0.0",
     "lodash-es": "^4.17.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -41,11 +40,12 @@
     "@types/jest": "^24.0.11",
     "@types/node": "~11.12.0",
     "codelyzer": "~5.0.0",
+    "core-js": "^2.6.5",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.5.0",
     "jest-marbles": "^2.2.0",
-    "jest-preset-angular": "7.0.1",
+    "jest-preset-angular": "^6.0.2",
     "protractor": "~6.0.0",
     "ts-node": "~8.0.3",
     "tslint": "~5.14.0",
